--- a/Messages/Templates/Messages/directMessaging.html
+++ b/Messages/Templates/Messages/directMessaging.html
@@ -1,44 +1,16 @@
-    <!Doctype html>
-    <html>
-        <head>
-            <title>UncleDanks</title>
-            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-            <script src="https://www.gstatic.com/firebasejs/3.0.0/firebase.js"></script>
-            <script src="jquery-3.3.1.min.js"></script>
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        </head>
-        <style>
-            #MessageBoard{
-                height: 500px;
-                padding: 5px;
-                overflow: scroll;
-            }
-            #myForm{
-                clear: both; 
-                padding: 5px;   
-            }
-        </style>
-        <body>
+<!Doctype html>
 
-            <div class="container text-center">
-                <header>
-                    <h1>Welcome to Moehs Messaging App</h1>
-                    
-                    <u>
-                         {% for user in  UserList %}
-                             <li>{{user}}</li>
-                         {% endfor %}
-                    </u>
-                    <form action="{% url 'directMessaging' %}" method="get">
-                        {% csrf_token %}
-                        <label>Enter the name of one of the users to message!</label>
-                        <input type="text" placeholder="username" name="UserEntry">
-                        <input type="submit" value="Enter">
-                    </form>
-                </header>
-                <div id="mainBody">
-                    <div id="Messages">
+<html>
+    <head>
+        <title>Username</title><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    </head>
+    <body>
+        <div class="container text-center">
+            <header>
 
+            </header>
+            <div id="mainBody">
+                <div id="Messages">
                     {% if user.is_authenticated %}
                         <div id="MessageBoard">
                             <div class="card" data-spy="scroll">
@@ -72,9 +44,10 @@
                             {% endfor %}
                             </div>
                         </div>
-                    <form method="post" id="myForm" class="form-group" action="{% url 'sendMessage' %}">
+                    <form method="post" id="myForm" class="form-group" action="{% url 'sendDirect' %}">
                         <p>Say something {{ user.username }}!</p>
                         {% csrf_token %}
+                        <input name="other_user" value="{{other_user}}" placeholder="{{other_user}}" readonly>
                         <input type="textera" name="enteredMessage" id="messageSent" placeholder="Enter your message here!">
                         <input type="submit" onClick="addMessage()" name="submit" value="Enter">
                     </form>
@@ -84,30 +57,7 @@
                         <a href="{%  url 'login' %}"><p class="btn btn-lg btn-primary btn-block">Please login to send anything.</p></a>
                     {% endif %}
                 </div>
-
             </div>
-            <script>
-              var myDiv = document.getElementById("MessageBoard");
-          	    myDiv.scrollTop = myDiv.scrollHeight;
-                $('.likes').click(function(){
-                    var catid;
-                    catid = $(this).attr("data-catid");
-
-                    $.get('/directMessaging/', {"category_id": catid}, function(data){
-                            $('#like_count').html(data);
-                            $('likes').hide();
-                    });
-                });
-                function addMessage() {
-                    var messageDEv = "<p><bold>{{ user.username }}:</bold>";
-                    var messageSent = document.getElementById('messageSent').value;
-                    console.log("Message being sent: "+messageSent);
-                    var message = messageDEv + document.getElementById('messageSent').value +"</p>";
-                    console.log(message);
-                    document.getElementById("Messages").innerHTML = message;
-              }
-
-
-            </script>
-        </body>
-    </html>
+        </div>
+    </body>
+</html>
